# zensync

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
packaging/: install-client-linux.sh  install-client-windows.ps1  zensync-agent.service  zensync-agent.xml
pi/: install-pi.sh  zensync-flush-logs  zensync-flush-logs.service  zensync-prune  zensync-prune.service  zensync-prune.timer  zensync-update-pointer
tests/: test_config.py  test_conflict.py  test_payload.py  test_pointer_cas.py  test_profile.py  test_state_machine.py  test_transport.py
zensync/: __main__.py  agent.py  cli.py  config.py  conflict.py  payload.py  profile.py  state.py  transport.py  watcher.py
