[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zensync"
version = "0.1.0"
description = "Cross-device sync for Zen Browser tabs, workspaces, and essentials"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.0",
    "psutil>=5.9",
    "watchdog>=4.0",
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
zensync = "zensync.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
